kubernetes-project/admin/longhorn/ingress-longhorn.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    kubernetes.io/tls-acme: "false"
spec:
  rules:
  -
    host: longhorn.158.160.5.137.nip.io
    http:
      paths: 
      -
        path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
